# focus

./: .browsercache.json  .eman2settings  .gitignore  CMakeLists.txt  CMakeLists.txt.rej  INSTALL.SOURCE  Info.plist  LICENSE  Makefile  Makefile.in  README  README.md  ToDo.c  about.htm.in  build_SP_cluster  build_all  build_all_parallel  build_bundle  build_clean  changes.htm  changes.htm.in  config  config.status  current.version.in  focus-respect-destdir3.patch  make_clean  mrc  nighly_build  package_bundle  prepare4brutus.sh  prepare4cuda.sh  qmake.pro  release_exclusion  test.patch  test.sh  todo  write_changes.sh
2dx_automator/: 2dx_automator.py  Add2dxImageWatcher.py  CMakeLists.txt  MC_splitter.py  MotionCorrectionWatcher.py  WatcherBaseClass.py  crystalplotter.py  driftplotter.py  motioncorrect_gui.py
2dx_automator/default_configs/: default_clc.cfg  default_mlok1.cfg  default_mlok1_nocAMP.cfg
2dx_image/: CMakeLists.txt  Distribution.plist  Info.plist  Makefile  Required-Packages  centralWindow.cpp  centralWindow.h  controlActionsGroup.cpp  controlActionsGroup.h  install_symlink.cmake  main.cpp  mainWindow.cpp  mainWindow.h  moc_centralWindow.cpp  moc_controlActionsGroup.cpp  moc_mainWindow.cpp  moc_navigator.cpp  moc_progressStamps.cpp  moc_resultsFile.cpp  moc_resultsParser.cpp  moc_statusViewer.cpp  moc_warningBox.cpp  navigator.cpp  progressStamps.cpp  qmake.pro  rebuild  resultsFile.cpp  resultsParser.h  scripts-standard  statusView.h  statusViewer.cpp  warningBox.h
2dx_image/2dx_image/: Makefile  mainWindow.cpp  moc_centralWindow.cpp  moc_controlActionsGroup.cpp  moc_mainWindow.cpp  moc_navigator.cpp  moc_progressStamps.cpp  moc_resultsFile.cpp  moc_resultsParser.cpp  moc_statusViewer.cpp  moc_warningBox.cpp  progressStamps.cpp  scripts-custom  statusView.cpp
2dx_image/2dx_image.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
2dx_logbrowser/: 2dx_logbrowser.pro  CMakeLists.txt  Info.plist  LogBrowserCommons.h  LogDirectory.cpp  Makefile  moc_LBMainWindow.cpp  moc_LogViewer.cpp  moc_ViewerContainer.cpp  p2dxlogbrowser.cpp  qmake.pro
2dx_logbrowser/2dx_logbrowser.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
2dx_logbrowser/resource/: icon_OSX.icns
2dx_merge/: CMakeLists.txt  Info.plist  Makefile  albumContainer.cpp  albumContainer.h  albumControl.cpp  albumView.cpp  albumView.h  albumViewer.cpp  albumViewer.h  blockContainer.cpp  blockContainer.h  eulerWindow.cpp  executionContainer.cpp  executionContainer.h  imageAlbum.cpp  imageAlbum.cpp-Henning-Test  imageAlbum.h  imageAlbum.h-Henning-Test  imageItem.cpp  imageNameParser.cpp  imageNameParser.h  importBox.cpp  importBox.h  importTool.cpp  importTool.h  importTool.ui  install_symlink.cmake  main.cpp  mainWindow.cpp  mainWindow.h  moc_albumControl.cpp  moc_albumDelegate.cpp  moc_albumModel.cpp  moc_albumView.cpp  moc_albumViewer.cpp  moc_imageAlbum.cpp  moc_importBox.cpp  moc_importTool.cpp  moc_mainWindow.cpp  (+22 more)
2dx_merge/2dx_merge.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
apps/: CMakeLists.txt
apps/2dx_automator/: crystalplotter.py
apps/2dx_gui/: AutoImportWindow.cpp  AutoImportWindow.h  CMakeLists.txt  ExecutionWindow.cpp  ImageTab.cpp  LibraryTab.cpp  MainWindow.cpp  MainWindow.h  ProjectLoadPage.h  ProjectWindow.cpp  ProjectWindow.h  StartupWizard.h  UpdateWindow.h  main.cpp  mainWindow.cpp  mainWindow.h
apps/2dx_image/: CMakeLists.txt  main.cpp
apps/2dx_logbrowser/: CMakeLists.txt  LBMainWindow.cpp  LogDirectory.h
apps/2dx_merge/: CMakeLists.txt  main.cpp
apps/2dx_mrc_converter/: CMakeLists.txt  main.cpp
apps/2dx_viewer/: CMakeLists.txt  MainWindow.cpp  main.cpp
apps/beta/: ImagePreview.h  ImageWindow.cpp  ImageWindow.h  LibraryTab.cpp  ResultsParser.cpp  WarningBox.h  eulerWindow.h  imageViewer.cpp  imageViewer.h  import_execute_page.h  label_wizard_page.h  latticeTool.cpp  latticeTool.h  mrcGraphicsItem.cpp  reprojectWindow.cpp
apps/fLogBrowser/: CMakeLists.txt  LogViewer.cpp  ViewerContainer.cpp  pfocusLogBrowser.cpp
apps/fMrcConverter/: CMakeLists.txt  main.cpp
apps/fViewer/: CMakeLists.txt  MainWindow.h  main.cpp
apps/focus/: AboutWindow.cpp  AboutWindow.h  AddProjectPage.h  AutoImportWindow.cpp  AutoImportWindow.h  CMakeLists.txt  ExecutionWindow.cpp  ExecutionWindow.h  ImageTab.h  LibraryTab.cpp  LibraryTab.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  ProjectLoadPage.h  ProjectWindow.cpp  SelectProjectPage.cpp  StartupWizard.h  UpdateWindow.cpp  UpdateWindow.h  main.cpp
apps/plugins/: CMakeLists.txt
apps/resources/: CMakeLists.txt  about.htm  check_used_params.py
apps/src/: CMakeLists.txt
apps/stale/: 2dx_image.mac  ImagePreview.cpp  ResultsParser.h  WarningBox.cpp  import_images_wizard.h  import_options_page.h  reprojectWindow.h
cmake/: CMakeLists.txt  FindBoost.cmake  FindCppUnit.cmake  FindEigen3.cmake  FindFFTW.cmake  FindQt5.cmake  GetPropagateDeps.cmake  SetPropagateDeps.cmake
cmake-2dx/: .qmake.cache.in  2dx-doxygen.conf  INSTALL.SOURCE  ToDo.c  beta_testers.rtf  configure  configure.ac  make_clean  proc  rebuild  release_exclusion  todo
cmake-2dx/2dx_image/: CMakeLists.txt  Info.plist  bin  mainWindow.cpp  mainWindow.h  navigator.h  progressStamps.h  qmake.pro  resultsParser.cpp  statusViewer.cpp  warningBox.cpp
cmake-2dx/2dx_logbrowser/: Distribution.plist  Info.plist  LBMainWindow.h  LogFileReader.h  (+5 more)
gui/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h
include/: CMakeLists.txt  aboutWindow.h  autoImportTool.h  confData.h  confElement.h  confInput.h  confInterface.h  confModel.h  confVersion.h.in  ctfTool.h  displayParametersTool.h  fullScreenImage.h  imageNavigator.h  imagePreview.h  latticeRefineTool.h  levelGroup.h  mrcHeader.h  mrcHeaderDisplay.h  mrcImage.h  mrcImageFast.h  phaseView.h  pointHash.h  resizeableStackedWidget.h  scriptModule.h  scriptProgress.h  threadedLoad.h  updateWindow.h  zoomWindow.h
kernel/: CMakeLists.txt  Makefile  Makefile.in  cmake_install.cmake  config.status  configure  configure.ac
packaging/: CMakeLists.txt
(+3052 files in other folders)
