



file(GLOB 2DX_AUTO 2dx_*)
file(GLOB MC_AUTO motioncorrect_gui*)
file(GLOB PY_FILES *.py)

file(GLOB PY_RES_FILES *.py)
list(REMOVE_ITEM PY_RES_FILES ${2DX_AUTO})
list(REMOVE_ITEM PY_RES_FILES ${MC_AUTO})



install(FILES ${PY_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/2dx_automator)


install(FILES ${PY_RES_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
install(PROGRAMS ${2DX_AUTO} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin RENAME 2dx_automator)
install(PROGRAMS ${MC_AUTO} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin RENAME MC_automator)


